--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kenneth Ballenegger",
-  "license": "Azure"
+  "license": "Azure",
+  "dependencies": {
+    "react": "^0.12.2"
+  }
 }
